AIC/Practica 2/prac2b/input.yacc.output
Terminals which are not used

   REG_FP


Grammar

    0 $accept: r_inicio $end

    1 @1: /* empty */

    2 r_inicio: LABEL @1 r_linea_ensamblador
    3         | r_linea_ensamblador

    4 @2: /* empty */

    5 r_linea_ensamblador: r_directiva NL @2 r_inicio

    6 @3: /* empty */

    7 r_linea_ensamblador: r_instruccion NL @3 r_inicio
    8                    | NL r_inicio
    9                    | r_directiva
   10                    | r_instruccion
   11                    | /* empty */

   12 r_directiva: DE_DATA
   13            | DE_TEXT

   14 @4: /* empty */

   15 r_directiva: DE_DWORD @4 r_lista_enteros

   16 @5: /* empty */

   17 r_directiva: DE_DOUBLE @5 r_lista_reales
   18            | DE_SPACE T_INT_LIT
   19            | DE_IREG r_valores_enteros

   20 @6: /* empty */

   21 r_lista_enteros: T_INT_LIT @6 r_lista_enteros_cont

   22 r_lista_enteros_cont: ',' r_lista_enteros
   23                     | /* empty */

   24 @7: /* empty */

   25 r_lista_reales: T_FP_LIT @7 r_lista_reales_cont

   26 @8: /* empty */

   27 r_lista_reales: T_INT_LIT @8 r_lista_reales_cont

   28 r_lista_reales_cont: ',' r_lista_reales
   29                    | /* empty */

   30 @9: /* empty */

   31 r_valores_enteros: T_INT_LIT @9 r_valores_enteros_cont

   32 r_valores_enteros_cont: ',' r_valores_enteros
   33                       | /* empty */

   34 r_inmediato: T_INT_LIT
   35            | T_ALPHANUM

   36 r_posicion: T_INT_LIT
   37           | T_ALPHANUM

   38 r_instruccion: INST_NOP
   39              | FORM_INM_L REG_INT ',' r_inmediato '(' REG_INT ')'
   40              | FORM_INM_S REG_INT ',' r_inmediato '(' REG_INT ')'
   41              | FORM_INM_B REG_INT ',' r_posicion
   42              | FORM_REG REG_INT ',' REG_INT ',' REG_INT
   43              | FORM_REG REG_INT ',' REG_INT ',' r_inmediato
   44              | FORM_INM REG_INT ',' REG_INT ',' r_inmediato
   45              | FORM_INM_T T_INT_LIT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 39 40
')' (41) 39 40
',' (44) 22 28 32 39 40 41 42 43 44
error (256)
NL (258) 5 7 8
T_INT_LIT (259) 18 21 27 31 34 36 45
T_FP_LIT (260) 25
T_ALPHANUM (261) 35 37
REG_INT (262) 39 40 41 42 43 44
REG_FP (263)
DE_DATA (264) 12
DE_TEXT (265) 13
DE_DWORD (266) 15
DE_DOUBLE (267) 17
DE_SPACE (268) 18
DE_IREG (269) 19
FORM_INM_L (270) 39
FORM_INM_S (271) 40
FORM_INM (272) 44
FORM_INM_B (273) 41
FORM_INM_T (274) 45
INST_NOP (275) 38
FORM_REG (276) 42 43
LABEL (277) 2


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
r_inicio (27)
    on left: 2 3, on right: 0 5 7 8
@1 (28)
    on left: 1, on right: 2
r_linea_ensamblador (29)
    on left: 5 7 8 9 10 11, on right: 2 3
@2 (30)
    on left: 4, on right: 5
@3 (31)
    on left: 6, on right: 7
r_directiva (32)
    on left: 12 13 15 17 18 19, on right: 5 9
@4 (33)
    on left: 14, on right: 15
@5 (34)
    on left: 16, on right: 17
r_lista_enteros (35)
    on left: 21, on right: 15 22
@6 (36)
    on left: 20, on right: 21
r_lista_enteros_cont (37)
    on left: 22 23, on right: 21
r_lista_reales (38)
    on left: 25 27, on right: 17 28
@7 (39)
    on left: 24, on right: 25
@8 (40)
    on left: 26, on right: 27
r_lista_reales_cont (41)
    on left: 28 29, on right: 25 27
r_valores_enteros (42)
    on left: 31, on right: 19 32
@9 (43)
    on left: 30, on right: 31
r_valores_enteros_cont (44)
    on left: 32 33, on right: 31
r_inmediato (45)
    on left: 34 35, on right: 39 40 43 44
r_posicion (46)
    on left: 36 37, on right: 41
r_instruccion (47)
    on left: 38 39 40 41 42 43 44 45, on right: 7 10


state 0

    0 $accept: . r_inicio $end

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_DWORD    shift, and go to state 4
    DE_DOUBLE   shift, and go to state 5
    DE_SPACE    shift, and go to state 6
    DE_IREG     shift, and go to state 7
    FORM_INM_L  shift, and go to state 8
    FORM_INM_S  shift, and go to state 9
    FORM_INM    shift, and go to state 10
    FORM_INM_B  shift, and go to state 11
    FORM_INM_T  shift, and go to state 12
    INST_NOP    shift, and go to state 13
    FORM_REG    shift, and go to state 14
    LABEL       shift, and go to state 15

    $default  reduce using rule 11 (r_linea_ensamblador)

    r_inicio             go to state 16
    r_linea_ensamblador  go to state 17
    r_directiva          go to state 18
    r_instruccion        go to state 19


state 1

    8 r_linea_ensamblador: NL . r_inicio

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_DWORD    shift, and go to state 4
    DE_DOUBLE   shift, and go to state 5
    DE_SPACE    shift, and go to state 6
    DE_IREG     shift, and go to state 7
    FORM_INM_L  shift, and go to state 8
    FORM_INM_S  shift, and go to state 9
    FORM_INM    shift, and go to state 10
    FORM_INM_B  shift, and go to state 11
    FORM_INM_T  shift, and go to state 12
    INST_NOP    shift, and go to state 13
    FORM_REG    shift, and go to state 14
    LABEL       shift, and go to state 15

    $default  reduce using rule 11 (r_linea_ensamblador)

    r_inicio             go to state 20
    r_linea_ensamblador  go to state 17
    r_directiva          go to state 18
    r_instruccion        go to state 19


state 2

   12 r_directiva: DE_DATA .

    $default  reduce using rule 12 (r_directiva)


state 3

   13 r_directiva: DE_TEXT .

    $default  reduce using rule 13 (r_directiva)


state 4

   15 r_directiva: DE_DWORD . @4 r_lista_enteros

    $default  reduce using rule 14 (@4)

    @4  go to state 21


state 5

   17 r_directiva: DE_DOUBLE . @5 r_lista_reales

    $default  reduce using rule 16 (@5)

    @5  go to state 22


state 6

   18 r_directiva: DE_SPACE . T_INT_LIT

    T_INT_LIT  shift, and go to state 23


state 7

   19 r_directiva: DE_IREG . r_valores_enteros

    T_INT_LIT  shift, and go to state 24

    r_valores_enteros  go to state 25


state 8

   39 r_instruccion: FORM_INM_L . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 26


state 9

   40 r_instruccion: FORM_INM_S . REG_INT ',' r_inmediato '(' REG_INT ')'

    REG_INT  shift, and go to state 27


state 10

   44 r_instruccion: FORM_INM . REG_INT ',' REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 28


state 11

   41 r_instruccion: FORM_INM_B . REG_INT ',' r_posicion

    REG_INT  shift, and go to state 29


state 12

   45 r_instruccion: FORM_INM_T . T_INT_LIT

    T_INT_LIT  shift, and go to state 30


state 13

   38 r_instruccion: INST_NOP .

    $default  reduce using rule 38 (r_instruccion)


state 14

   42 r_instruccion: FORM_REG . REG_INT ',' REG_INT ',' REG_INT
   43              | FORM_REG . REG_INT ',' REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 31


state 15

    2 r_inicio: LABEL . @1 r_linea_ensamblador

    $default  reduce using rule 1 (@1)

    @1  go to state 32


state 16

    0 $accept: r_inicio . $end

    $end  shift, and go to state 33


state 17

    3 r_inicio: r_linea_ensamblador .

    $default  reduce using rule 3 (r_inicio)


state 18

    5 r_linea_ensamblador: r_directiva . NL @2 r_inicio
    9                    | r_directiva .

    NL  shift, and go to state 34

    $default  reduce using rule 9 (r_linea_ensamblador)


state 19

    7 r_linea_ensamblador: r_instruccion . NL @3 r_inicio
   10                    | r_instruccion .

    NL  shift, and go to state 35

    $default  reduce using rule 10 (r_linea_ensamblador)


state 20

    8 r_linea_ensamblador: NL r_inicio .

    $default  reduce using rule 8 (r_linea_ensamblador)


state 21

   15 r_directiva: DE_DWORD @4 . r_lista_enteros

    T_INT_LIT  shift, and go to state 36

    r_lista_enteros  go to state 37


state 22

   17 r_directiva: DE_DOUBLE @5 . r_lista_reales

    T_INT_LIT  shift, and go to state 38
    T_FP_LIT   shift, and go to state 39

    r_lista_reales  go to state 40


state 23

   18 r_directiva: DE_SPACE T_INT_LIT .

    $default  reduce using rule 18 (r_directiva)


state 24

   31 r_valores_enteros: T_INT_LIT . @9 r_valores_enteros_cont

    $default  reduce using rule 30 (@9)

    @9  go to state 41


state 25

   19 r_directiva: DE_IREG r_valores_enteros .

    $default  reduce using rule 19 (r_directiva)


state 26

   39 r_instruccion: FORM_INM_L REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 42


state 27

   40 r_instruccion: FORM_INM_S REG_INT . ',' r_inmediato '(' REG_INT ')'

    ','  shift, and go to state 43


state 28

   44 r_instruccion: FORM_INM REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 44


state 29

   41 r_instruccion: FORM_INM_B REG_INT . ',' r_posicion

    ','  shift, and go to state 45


state 30

   45 r_instruccion: FORM_INM_T T_INT_LIT .

    $default  reduce using rule 45 (r_instruccion)


state 31

   42 r_instruccion: FORM_REG REG_INT . ',' REG_INT ',' REG_INT
   43              | FORM_REG REG_INT . ',' REG_INT ',' r_inmediato

    ','  shift, and go to state 46


state 32

    2 r_inicio: LABEL @1 . r_linea_ensamblador

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_DWORD    shift, and go to state 4
    DE_DOUBLE   shift, and go to state 5
    DE_SPACE    shift, and go to state 6
    DE_IREG     shift, and go to state 7
    FORM_INM_L  shift, and go to state 8
    FORM_INM_S  shift, and go to state 9
    FORM_INM    shift, and go to state 10
    FORM_INM_B  shift, and go to state 11
    FORM_INM_T  shift, and go to state 12
    INST_NOP    shift, and go to state 13
    FORM_REG    shift, and go to state 14

    $default  reduce using rule 11 (r_linea_ensamblador)

    r_linea_ensamblador  go to state 47
    r_directiva          go to state 18
    r_instruccion        go to state 19


state 33

    0 $accept: r_inicio $end .

    $default  accept


state 34

    5 r_linea_ensamblador: r_directiva NL . @2 r_inicio

    $default  reduce using rule 4 (@2)

    @2  go to state 48


state 35

    7 r_linea_ensamblador: r_instruccion NL . @3 r_inicio

    $default  reduce using rule 6 (@3)

    @3  go to state 49


state 36

   21 r_lista_enteros: T_INT_LIT . @6 r_lista_enteros_cont

    $default  reduce using rule 20 (@6)

    @6  go to state 50


state 37

   15 r_directiva: DE_DWORD @4 r_lista_enteros .

    $default  reduce using rule 15 (r_directiva)


state 38

   27 r_lista_reales: T_INT_LIT . @8 r_lista_reales_cont

    $default  reduce using rule 26 (@8)

    @8  go to state 51


state 39

   25 r_lista_reales: T_FP_LIT . @7 r_lista_reales_cont

    $default  reduce using rule 24 (@7)

    @7  go to state 52


state 40

   17 r_directiva: DE_DOUBLE @5 r_lista_reales .

    $default  reduce using rule 17 (r_directiva)


state 41

   31 r_valores_enteros: T_INT_LIT @9 . r_valores_enteros_cont

    ','  shift, and go to state 53

    $default  reduce using rule 33 (r_valores_enteros_cont)

    r_valores_enteros_cont  go to state 54


state 42

   39 r_instruccion: FORM_INM_L REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 55
    T_ALPHANUM  shift, and go to state 56

    r_inmediato  go to state 57


state 43

   40 r_instruccion: FORM_INM_S REG_INT ',' . r_inmediato '(' REG_INT ')'

    T_INT_LIT   shift, and go to state 55
    T_ALPHANUM  shift, and go to state 56

    r_inmediato  go to state 58


state 44

   44 r_instruccion: FORM_INM REG_INT ',' . REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 59


state 45

   41 r_instruccion: FORM_INM_B REG_INT ',' . r_posicion

    T_INT_LIT   shift, and go to state 60
    T_ALPHANUM  shift, and go to state 61

    r_posicion  go to state 62


state 46

   42 r_instruccion: FORM_REG REG_INT ',' . REG_INT ',' REG_INT
   43              | FORM_REG REG_INT ',' . REG_INT ',' r_inmediato

    REG_INT  shift, and go to state 63


state 47

    2 r_inicio: LABEL @1 r_linea_ensamblador .

    $default  reduce using rule 2 (r_inicio)


state 48

    5 r_linea_ensamblador: r_directiva NL @2 . r_inicio

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_DWORD    shift, and go to state 4
    DE_DOUBLE   shift, and go to state 5
    DE_SPACE    shift, and go to state 6
    DE_IREG     shift, and go to state 7
    FORM_INM_L  shift, and go to state 8
    FORM_INM_S  shift, and go to state 9
    FORM_INM    shift, and go to state 10
    FORM_INM_B  shift, and go to state 11
    FORM_INM_T  shift, and go to state 12
    INST_NOP    shift, and go to state 13
    FORM_REG    shift, and go to state 14
    LABEL       shift, and go to state 15

    $default  reduce using rule 11 (r_linea_ensamblador)

    r_inicio             go to state 64
    r_linea_ensamblador  go to state 17
    r_directiva          go to state 18
    r_instruccion        go to state 19


state 49

    7 r_linea_ensamblador: r_instruccion NL @3 . r_inicio

    NL          shift, and go to state 1
    DE_DATA     shift, and go to state 2
    DE_TEXT     shift, and go to state 3
    DE_DWORD    shift, and go to state 4
    DE_DOUBLE   shift, and go to state 5
    DE_SPACE    shift, and go to state 6
    DE_IREG     shift, and go to state 7
    FORM_INM_L  shift, and go to state 8
    FORM_INM_S  shift, and go to state 9
    FORM_INM    shift, and go to state 10
    FORM_INM_B  shift, and go to state 11
    FORM_INM_T  shift, and go to state 12
    INST_NOP    shift, and go to state 13
    FORM_REG    shift, and go to state 14
    LABEL       shift, and go to state 15

    $default  reduce using rule 11 (r_linea_ensamblador)

    r_inicio             go to state 65
    r_linea_ensamblador  go to state 17
    r_directiva          go to state 18
    r_instruccion        go to state 19


state 50

   21 r_lista_enteros: T_INT_LIT @6 . r_lista_enteros_cont

    ','  shift, and go to state 66

    $default  reduce using rule 23 (r_lista_enteros_cont)

    r_lista_enteros_cont  go to state 67


state 51

   27 r_lista_reales: T_INT_LIT @8 . r_lista_reales_cont

    ','  shift, and go to state 68

    $default  reduce using rule 29 (r_lista_reales_cont)

    r_lista_reales_cont  go to state 69


state 52

   25 r_lista_reales: T_FP_LIT @7 . r_lista_reales_cont

    ','  shift, and go to state 68

    $default  reduce using rule 29 (r_lista_reales_cont)

    r_lista_reales_cont  go to state 70


state 53

   32 r_valores_enteros_cont: ',' . r_valores_enteros

    T_INT_LIT  shift, and go to state 24

    r_valores_enteros  go to state 71


state 54

   31 r_valores_enteros: T_INT_LIT @9 r_valores_enteros_cont .

    $default  reduce using rule 31 (r_valores_enteros)


state 55

   34 r_inmediato: T_INT_LIT .

    $default  reduce using rule 34 (r_inmediato)


state 56

   35 r_inmediato: T_ALPHANUM .

    $default  reduce using rule 35 (r_inmediato)


state 57

   39 r_instruccion: FORM_INM_L REG_INT ',' r_inmediato . '(' REG_INT ')'

    '('  shift, and go to state 72


state 58

   40 r_instruccion: FORM_INM_S REG_INT ',' r_inmediato . '(' REG_INT ')'

    '('  shift, and go to state 73


state 59

   44 r_instruccion: FORM_INM REG_INT ',' REG_INT . ',' r_inmediato

    ','  shift, and go to state 74


state 60

   36 r_posicion: T_INT_LIT .

    $default  reduce using rule 36 (r_posicion)


state 61

   37 r_posicion: T_ALPHANUM .

    $default  reduce using rule 37 (r_posicion)


state 62

   41 r_instruccion: FORM_INM_B REG_INT ',' r_posicion .

    $default  reduce using rule 41 (r_instruccion)


state 63

   42 r_instruccion: FORM_REG REG_INT ',' REG_INT . ',' REG_INT
   43              | FORM_REG REG_INT ',' REG_INT . ',' r_inmediato

    ','  shift, and go to state 75


state 64

    5 r_linea_ensamblador: r_directiva NL @2 r_inicio .

    $default  reduce using rule 5 (r_linea_ensamblador)


state 65

    7 r_linea_ensamblador: r_instruccion NL @3 r_inicio .

    $default  reduce using rule 7 (r_linea_ensamblador)


state 66

   22 r_lista_enteros_cont: ',' . r_lista_enteros

    T_INT_LIT  shift, and go to state 36
